--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,6 @@ html {
   --max-width-page: 850px;
 }
 
-.purple {
-  color: var(--detail-color);
-}
-
 .background {
   height: 100vh;
   z-index: -2;
@@ -38,6 +34,20 @@ html {
     hsla(0, 0%, 100%, 0)
   );
 }
+
+/*#region GENERIC */
+
+.purple {
+  color: var(--detail-color);
+}
+
+.title {
+  font-size: 1.875rem;
+  font-weight: 600;
+  color: var(--contrast-color);
+}
+
+/*#endregion */
 
 /*#region HEADER */
 
@@ -53,7 +63,7 @@ html {
 }
 
 .header-container header {
-  max-width: 1100px;
+  max-width: 890px;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -96,11 +106,6 @@ html {
 .nav-responsive,
 .hamburger-menu {
   display: none;
-}
-
-.nav-scrolled {
-  background-color: var(--bg-primary-color);
-  box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1);
 }
 
 .underline {
@@ -229,13 +234,13 @@ html {
   width: 75%;
 }
 
-.title {
+.info-title {
   font-size: 2.8rem;
   font-weight: 700;
   color: var(--contrast-color);
 }
 
-.subtitle {
+.info-subtitle {
   padding-right: 1rem;
   font-weight: 500;
   font-size: 1.25rem;
@@ -275,7 +280,6 @@ html {
 }
 
 .social-media li a {
-  box-shadow: 0 1px 1px rgba(214, 214, 214, 0.1);
   background-image: linear-gradient(to top right, white, rgb(243, 242, 242));
   font-size: 1rem;
   padding-top: 0.5rem;
@@ -291,6 +295,7 @@ html {
   display: flex;
   text-decoration: none;
   transition: transform 0.2s;
+  box-shadow: 0 1px 1px rgba(85, 84, 84, 0.1);
 }
 
 .social-media li a:hover {
@@ -303,6 +308,116 @@ html {
 }
 
 /*#endregion */
+
+/*#region EXPERIENCE*/
+
+.experience {
+  width: var(--max-width-page);
+  padding-top: 2rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1536px;
+}
+
+.experience-title {
+  margin-top: 2rem;
+}
+
+.experience-container {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  margin-top: 3.5rem;
+  width: 100%;
+  max-width: 1536px;
+}
+
+.experience-list {
+  border-left: 1px solid #adaaaa;
+  position: relative;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.experience-list li {
+  margin-bottom: 1.5rem;
+  margin-left: 1.5rem;
+}
+
+.experience-icon {
+  border-radius: 500px;
+  justify-content: center;
+  align-items: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  left: -0.75rem;
+  margin-top: 10px;
+  position: absolute;
+  color: rgb(222 243 255);
+  background-color: var(--detail-color);
+}
+
+.experience-icon svg {
+  width: 1rem;
+  height: 1rem;
+  display: block;
+}
+
+.experience-info {
+  padding-top: 7px;
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+  padding-bottom: 3rem;
+  display: grid;
+  margin-left: 1rem;
+  position: relative;
+}
+
+.left-info {
+  grid-column: span 2 / span 2;
+  padding-bottom: 3rem;
+  position: relative;
+}
+
+.left-container {
+  top: 0;
+  position: sticky;
+}
+
+.left-container h3 {
+  font-weight: 700;
+  font-size: 1.25rem;
+  color: var(--detail-color);
+}
+
+.left-container h4 {
+  font-weight: 600;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  color: var(--contrast-color);
+}
+
+.time {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding: 0;
+  margin: 0;
+  color: #4b5563cc;
+}
+
+.right-info {
+  grid-column: span 4 / span 4;
+  color: var(--contrast-color);
+  padding-bottom: 1rem;
+  gap: 0.5rem;
+  flex-direction: column;
+  display: flex;
+  position: relative;
+}
+
+/*#endregion*/
 
 /*#region RESPONSIVE */
 
@@ -319,15 +434,37 @@ html {
     margin-top: 2.6rem;
     justify-content: center;
   }
+
+  .experience {
+    width: 80%;
+  }
 }
 
-@media screen and (max-width: 800px) {
-  nav {
-    display: none;
+@media screen and (max-width: 900px) {
+  .left-info {
+    flex-direction: row;
+    grid-column: none;
   }
 
-  .nav-responsive-scrolled {
-    background-color: var(--bg-primary-color);
+  .right-info {
+    flex-direction: row;
+    grid-column: none;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .home {
+    padding: 0;
+  }
+
+  .info {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  nav {
+    display: none;
   }
 
   .nav-responsive,
@@ -347,6 +484,7 @@ html {
 
   nav.responsive ul {
     display: block !important;
+    backdrop-filter: blur(10px);
   }
 
   nav.responsive ul li {
@@ -354,7 +492,6 @@ html {
     padding-top: 15px;
     padding-bottom: 20px;
     text-align: center;
-    backdrop-filter: blur(10px);
   }
 
   .menu {
@@ -426,21 +563,9 @@ html {
   }
 }
 
-@media screen and (max-width: 750px) {
-  .home {
-    padding: 0;
-  }
-
-  .info {
-    width: 100%;
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-}
-
 @media screen and (max-width: 640px) {
   .social-media {
-    padding-left: 25px;
+    padding-left: 50px;
     justify-content: left;
   }
 }
