--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,15 @@ html {
   color: var(--detail-color);
 }
 
+.section {
+  width: var(--max-width-page);
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1536px;
+}
+
 .title {
   font-size: 1.875rem;
   font-weight: 600;
@@ -196,7 +205,6 @@ html {
 /*#region HOME */
 
 .home {
-  height: 100vh;
   width: var(--max-width-page);
   justify-content: center;
   display: flex;
@@ -204,6 +212,7 @@ html {
   margin: 0 auto;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+  padding-top: 10rem;
   max-width: 1536px;
 }
 
@@ -211,7 +220,7 @@ html {
   justify-content: center;
   align-items: center;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   column-gap: 1rem;
   text-align: left;
 }
@@ -224,26 +233,25 @@ html {
 
 .info-image img {
   object-fit: contain;
-  width: 300px;
-  border-radius: 9999px;
+  width: 200px;
   height: auto;
   display: block;
 }
 
 .info {
   width: 75%;
+  margin-left: 50px;
 }
 
 .info-title {
-  font-size: 2.8rem;
+  font-size: 2.5rem;
   font-weight: 700;
   color: var(--contrast-color);
 }
 
 .info-subtitle {
-  padding-right: 1rem;
   font-weight: 500;
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
@@ -253,9 +261,9 @@ html {
 }
 
 .info-text {
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   font-weight: 500;
-  margin-top: 2.3rem;
+  margin-top: 1.5rem;
   color: var(--contrast-color);
   line-height: 1.5;
 }
@@ -312,13 +320,7 @@ html {
 /*#region EXPERIENCE*/
 
 .experience {
-  width: var(--max-width-page);
-  padding-top: 2rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1536px;
+  padding-top: 4.5rem;
 }
 
 .experience-title {
@@ -431,8 +433,12 @@ html {
   }
 
   .social-media {
-    margin-top: 2.6rem;
-    justify-content: center;
+    margin-top: 2rem;
+  }
+
+  .info {
+    margin: 0;
+    width: 80%;
   }
 
   .experience {
@@ -455,6 +461,7 @@ html {
 @media screen and (max-width: 750px) {
   .home {
     padding: 0;
+    padding-top: 10rem;
   }
 
   .info {
@@ -564,9 +571,10 @@ html {
 }
 
 @media screen and (max-width: 640px) {
-  .social-media {
-    padding-left: 50px;
-    justify-content: left;
+
+  .info{
+    width: 80%;
+    margin-left: 0;
   }
 }
 
