--- a/styles.css
+++ b/styles.css
@@ -655,6 +655,76 @@ a {
 
 /*#endregion */
 
+/*#region FOOTER */
+
+.footer {
+  justify-content: center;
+  display: flex;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer-container {
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-radius: 0.5rem;
+  max-width: 1280px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer-container span a {
+  text-decoration: none;
+  color: var(--contrast-color);
+}
+
+.footer-container span a:hover {
+  text-decoration: underline;
+}
+
+.footer-container span {
+  text-align: center;
+  color: var(--contrast-color);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.footer-list {
+  margin-top: 0;
+  align-items: center;
+  flex-wrap: wrap;
+  display: flex;
+  list-style: none;
+  gap: 1.5rem;
+}
+
+.footer-list li a svg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.git:hover,
+.linkedin:hover {
+  fill: #273342;
+}
+
+.mail:hover {
+  stroke: #273342;
+}
+
+.git {
+  width: 1.4rem !important;
+  height: 1.4rem !important;
+}
+
+/*#endregion */
+
 /*#region RESPONSIVE */
 
 @media screen and (max-width: 1000px) {
@@ -677,7 +747,8 @@ a {
 
   .experience,
   .projects,
-  .about-me {
+  .about-me,
+  .footer {
     width: 80%;
   }
 
@@ -716,6 +787,10 @@ a {
   .stack-list li svg {
     width: 2.2rem;
     height: 2.2rem;
+  }
+
+  .more-projects {
+    margin-top: 1.5rem;
   }
 }
 
@@ -849,8 +924,13 @@ a {
   }
   .experience,
   .projects,
-  .about-me {
+  .about-me,
+  .footer {
     width: 90%;
+  }
+
+  .footer {
+    margin-bottom: 1rem;
   }
 
   .stack-card span {
