--- a/styles.css
+++ b/styles.css
@@ -456,6 +456,7 @@ a {
   flex-direction: column;
   display: flex;
   position: relative;
+  box-shadow: 0px 4px 4px rgba(85, 84, 84, 0.1);
 }
 
 .img-border img {
@@ -464,11 +465,18 @@ a {
   object-fit: cover;
   object-position: top;
   display: block;
+  transition-duration: 0.3s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.img-border img:hover {
+  transform: scale(1.03);
 }
 
 .project-info {
   width: 55%;
-  margin-right: 30px;
+  margin-right: 40px;
 }
 
 .project-title {
@@ -494,17 +502,19 @@ a {
 }
 
 .project-stack li span {
-  color: #ffffff;
   font-size: 0.75rem;
+  font-weight: 500;
   line-height: 1rem;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-  background-color: #000000;
-  border-radius: 0.65rem;
+  border-radius: 0.55rem;
   column-gap: 0.5rem;
   display: flex;
+  background-image: linear-gradient(to top right, white, rgb(243, 242, 242));
+  border: 1px solid rgb(203 213 225);
+  box-shadow: 0 1px 1px rgba(85, 84, 84, 0.1);
 }
 
 .project-text {
@@ -572,6 +582,11 @@ a {
   margin-left: 5px;
 }
 
+.project-stack svg {
+  width: 1rem;
+  height: 1rem;
+}
+
 /*#endregion */
 
 /*#region ABOUT ME */
@@ -613,7 +628,7 @@ a {
 }
 
 .stack-card {
-  padding: 0.5rem;
+  padding: 0.35rem;
   padding-left: 0.8rem;
   padding-right: 0.8rem;
   border-radius: 0.65rem;
@@ -798,6 +813,7 @@ a {
   .left-info {
     flex-direction: row;
     grid-column: none;
+    padding-bottom: 2rem;
   }
 
   .right-info {
