--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ a {
   background-image: linear-gradient(to top right, white, rgb(243, 242, 242));
   box-shadow: 0 4px 3px rgba(85, 84, 84, 0.1);
   z-index: 5;
-  transition: opacity 0.15s ease-in;
+  transition: opacity 0.1s linear;
   opacity: 0;
 }
 
@@ -241,7 +241,6 @@ a {
 
 #language-options.show {
   opacity: 1;
-  
 }
 
 #language-options.hide {
@@ -857,6 +856,12 @@ a {
   }
 }
 
+@media screen and (max-width: 940px) {
+  #language-options {
+    transform: translateX(-70%);
+  }
+}
+
 @media screen and (max-width: 900px) {
   .left-info {
     flex-direction: row;
@@ -903,6 +908,8 @@ a {
   nav.responsive ul {
     display: block !important;
     background-color: white;
+    box-shadow: 0 4px 3px rgba(85, 84, 84, 0.1);
+
   }
 
   nav.responsive ul li {
@@ -978,6 +985,21 @@ a {
     border: none;
     outline: 2px solid var(--c);
     outline-offset: 5px;
+  }
+
+  #language-options {
+    transform: translateX(0%);
+    position: relative;
+    margin-top: 10px;
+    border: none;
+    background-color: white;
+    background-image: none;
+    box-shadow: none;
+    gap: 10px;
+  }
+
+  .separator {
+    display: none;
   }
 }
 
