--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap");
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -25,18 +23,12 @@ html {
 .background {
   height: 100vh;
   z-index: -2;
-  position: absolute;
-  width: 100%;
   top: 0;
   background-image: radial-gradient(
     ellipse 80% 80% at 50% -20%,
     var(--fade-color),
     hsla(0, 0%, 100%, 0)
   );
-}
-
-a {
-  -webkit-tap-highlight-color: transparent;
 }
 
 /*#region GENERIC */
@@ -47,8 +39,6 @@ a {
 
 .section {
   width: var(--max-width-page);
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
   margin-left: auto;
   margin-right: auto;
   max-width: 1536px;
@@ -57,7 +47,45 @@ a {
 .title {
   font-size: 1.875rem;
   font-weight: 600;
+}
+
+.contrast-color {
   color: var(--contrast-color);
+}
+
+.flex {
+  display: flex;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.m0p0 {
+  margin: 0;
+  padding: 0;
+}
+
+.pad05 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.width100 {
+  width: 100%;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.center {
+  align-items: center;
+  justify-content: center;
+}
+
+a {
+  -webkit-tap-highlight-color: transparent;
 }
 
 /*#endregion */
@@ -66,7 +94,6 @@ a {
 
 .header-container {
   position: fixed;
-  width: 100%;
   top: 0;
   left: 0;
   z-index: 200;
@@ -87,8 +114,8 @@ a {
 
 .header-container header .logo img {
   width: 80px;
+  height: 33px;
   padding-top: 5px;
-  cursor: pointer;
 }
 
 .header-container header ul {
@@ -97,20 +124,19 @@ a {
   gap: 45px;
 }
 
-.header-container header nav ul li {
+#nav ul li {
   transition: all 0.6s;
 }
 
-.header-container header nav ul li a {
+#nav ul li a {
   color: var(--contrast-color);
   transition: 0.25s;
   text-decoration: none;
-  font-family: Onest, sans-serif;
   font-weight: 500;
   user-select: none;
 }
 
-.header-container header nav ul li a:hover {
+#nav ul li a:hover {
   color: var(--contrast-color);
   cursor: pointer;
 }
@@ -181,7 +207,6 @@ a {
   right: 20px;
   width: 26px;
   height: 26px;
-  cursor: pointer;
   z-index: 1;
 }
 
@@ -207,7 +232,6 @@ a {
 }
 
 .lang-hover {
-  cursor: pointer;
   padding-left: 6px;
   padding-right: 6px;
   border-radius: 9999px;
@@ -228,8 +252,8 @@ a {
 #language-options {
   background-color: var(--bg-second-color);
   display: none;
-  flex-direction: column;
   position: absolute;
+  flex-direction: column;
   border-radius: 0.65rem;
   border: 1px solid rgb(203 213 225);
   transform: translateX(-35%);
@@ -265,27 +289,21 @@ a {
 .home {
   width: var(--max-width-page);
   justify-content: center;
-  display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
   padding-top: 10rem;
   max-width: 1536px;
 }
 
 .home-text {
-  justify-content: center;
-  align-items: center;
-  display: flex;
   flex-direction: row;
   text-align: left;
 }
 
 .info-image {
-  width: 25%;
+  width: 200px;
+  height: 200px;
   justify-content: center;
-  display: flex;
 }
 
 .info-image img {
@@ -303,7 +321,6 @@ a {
 .info-title {
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--contrast-color);
 }
 
 .info-subtitle {
@@ -321,7 +338,6 @@ a {
   font-size: 1.15rem;
   font-weight: 500;
   margin-top: 1.25rem;
-  color: var(--contrast-color);
   line-height: 1.5;
 }
 
@@ -336,7 +352,6 @@ a {
 }
 
 .social-media {
-  display: flex;
   gap: 1rem;
   margin-top: 1.25rem;
   justify-content: flex-start;
@@ -385,10 +400,7 @@ a {
 }
 
 .experience-container {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
   margin-top: 3rem;
-  width: 100%;
   max-width: 1536px;
 }
 
@@ -396,8 +408,6 @@ a {
   border-left: 1px solid #adaaaa;
   position: relative;
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 .experience-list li {
@@ -407,14 +417,10 @@ a {
 
 .experience-icon {
   border-radius: 500px;
-  justify-content: center;
-  align-items: center;
   width: 1.5rem;
   height: 1.5rem;
-  display: flex;
   left: -0.75rem;
   margin-top: 10px;
-  position: absolute;
   fill: white;
   background-color: var(--detail-color);
 }
@@ -454,24 +460,19 @@ a {
   font-weight: 600;
   font-size: 1.25rem;
   line-height: 1.75rem;
-  color: var(--contrast-color);
 }
 
 .time {
   font-size: 0.875rem;
   line-height: 1.25rem;
-  padding: 0;
-  margin: 0;
   color: #4b5563cc;
 }
 
 .right-info {
   grid-column: span 4 / span 4;
-  color: var(--contrast-color);
   padding-bottom: 1rem;
   gap: 0.5rem;
   flex-direction: column;
-  display: flex;
   position: relative;
 }
 
@@ -487,12 +488,10 @@ a {
   margin-top: 2.5rem;
   row-gap: 4rem;
   flex-direction: column;
-  display: flex;
 }
 
 .project {
   flex-direction: row;
-  display: flex;
 }
 
 .project-img {
@@ -500,14 +499,11 @@ a {
 }
 
 .img-border {
-  border-width: 1px;
-  border-color: var(--contrast-color);
   border-radius: 1rem;
   overflow: clip;
   gap: 2rem;
   align-items: center;
   flex-direction: column;
-  display: flex;
   position: relative;
   box-shadow: 0px 4px 4px rgba(85, 84, 84, 0.1);
 }
@@ -535,19 +531,16 @@ a {
 .project-title {
   font-size: 1.4rem;
   font-weight: 600;
-  color: var(--contrast-color);
   line-height: 2rem;
 }
 
 .project-container {
   flex-wrap: wrap;
-  display: flex;
   margin-top: 0.5rem;
 }
 
 .project-stack {
   column-gap: 0.5rem;
-  display: flex;
   flex-direction: row;
   margin-bottom: 0.5rem;
   list-style: none;
@@ -571,13 +564,11 @@ a {
 }
 
 .project-text {
-  color: var(--contrast-color);
   margin-top: 0.5rem;
 }
 
 .project-buttons {
   column-gap: 1rem;
-  display: flex;
   margin-top: 1rem;
 }
 
@@ -613,16 +604,13 @@ a {
 }
 
 .more-projects {
-  display: flex;
   justify-content: center;
   margin-top: 2.5rem;
-  width: 100%;
 }
 
 .more-container {
   color: #111;
   text-decoration: none;
-  cursor: pointer;
   padding-bottom: 1px;
   padding-left: 3px;
   padding-right: 3px;
@@ -648,15 +636,9 @@ a {
   font-size: 0.9rem;
   margin-top: 4.5rem;
   flex-direction: row;
-  justify-content: center;
-  display: flex;
-  align-items: center;
 }
 
 .repos {
-  color: var(--contrast-color);
-  display: flex;
-  width: 100%;
   justify-content: left;
 }
 
@@ -665,12 +647,8 @@ a {
 }
 
 .view-github {
-  display: flex;
-  cursor: pointer;
-  width: 100%;
   justify-content: right;
   text-decoration: none;
-  color: var(--contrast-color);
 }
 
 .view-github div svg {
@@ -679,7 +657,6 @@ a {
 }
 
 .portfolio {
-  width: 100%;
   padding-bottom: 1.25rem;
 }
 
@@ -696,7 +673,6 @@ a {
   flex-direction: row;
   gap: 3.2rem;
   justify-content: center;
-  display: flex;
 }
 
 .about-me-text {
@@ -713,7 +689,6 @@ a {
 
 .stack-list {
   margin-top: 7px;
-  display: flex;
   gap: 1.4rem;
   list-style: none;
 }
@@ -756,7 +731,6 @@ a {
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
-  position: absolute;
   z-index: 1;
 }
 
@@ -770,7 +744,6 @@ a {
 
 .footer {
   justify-content: center;
-  display: flex;
   margin-top: 4rem;
   margin-bottom: 1.5rem;
   margin-left: auto;
@@ -780,12 +753,10 @@ a {
 .footer-container {
   justify-content: space-between;
   align-items: center;
-  display: flex;
   padding-top: 1rem;
   padding-bottom: 1rem;
   border-radius: 0.5rem;
   max-width: 1280px;
-  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -810,7 +781,6 @@ a {
   margin-top: 0;
   align-items: center;
   flex-wrap: wrap;
-  display: flex;
   list-style: none;
   gap: 1.5rem;
 }
@@ -905,13 +875,7 @@ a {
   }
 }
 
-@media screen and (max-width: 940px) {
-  #language-options {
-    transform: translateX(-70%);
-  }
-}
-
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 980px) {
   .left-info {
     flex-direction: row;
     grid-column: none;
@@ -921,6 +885,12 @@ a {
   .right-info {
     flex-direction: row;
     grid-column: none;
+  }
+}
+
+@media screen and (max-width: 940px) {
+  #language-options {
+    transform: translateX(-70%);
   }
 }
 
@@ -965,74 +935,6 @@ a {
     padding-top: 15px;
     padding-bottom: 20px;
     text-align: center;
-  }
-
-  .menu {
-    --s: 20px;
-    --c: var(--contrast-color);
-    height: var(--s);
-    aspect-ratio: 1;
-    border: none;
-    padding: 0;
-    border-inline: calc(var(--s) / 2) solid #0000;
-    box-sizing: content-box;
-    --_g1: linear-gradient(var(--c) 20%, #0000 0 80%, var(--c) 0) no-repeat
-      content-box border-box;
-    --_g2: radial-gradient(
-        circle closest-side at 50% 12.5%,
-        var(--c) 95%,
-        #0000
-      )
-      repeat-y content-box border-box;
-    background: var(--_g2) left var(--_p, 0px) top,
-      var(--_g1) left calc(var(--s) / 10 + var(--_p, 0px)) top,
-      var(--_g2) right var(--_p, 0px) top,
-      var(--_g1) right calc(var(--s) / 10 + var(--_p, 0px)) top;
-    background-size: 20% 80%, 40% 100%;
-    position: relative;
-    clip-path: inset(0 25%);
-    -webkit-mask: linear-gradient(90deg, #0000, #000 25% 75%, #0000);
-    mask: linear-gradient(90deg, #0000, #000 25% 75%, #0000);
-    cursor: pointer;
-    transition: background-position 0.3s var(--_s, 0.3s),
-      clip-path 0s var(--_s, 0.6s);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    margin-top: 3px;
-  }
-
-  .menu:before,
-  .menu:after {
-    content: "";
-    position: absolute;
-    border-radius: var(--s);
-    inset: 40% 0;
-    background: var(--c);
-    transition: transform 0.3s calc(0.3s - var(--_s, 0.3s));
-  }
-
-  .menu:checked {
-    clip-path: inset(0);
-    --_p: calc(-1 * var(--s));
-    --_s: 0s;
-  }
-
-  .menu:checked:before {
-    transform: rotate(45deg);
-  }
-
-  .menu:checked:after {
-    transform: rotate(-45deg);
-  }
-
-  .menu:focus-visible {
-    clip-path: none;
-    -webkit-mask: none;
-    mask: none;
-    border: none;
-    outline: 2px solid var(--c);
-    outline-offset: 5px;
   }
 
   #language-options {
