--- a/styles.css
+++ b/styles.css
@@ -572,11 +572,26 @@ a {
   margin-top: 1rem;
 }
 
+/* delete */
 .project-buttons a {
   color: #ffffff;
   font-size: 1rem;
   line-height: 1.5rem;
   padding: 0.5rem 0.75rem;
+  border-radius: 0.7rem;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  max-width: fit-content;
+  display: inline-flex;
+  text-decoration: none;
+  transition: background-color 0.25s ease, color 0.25s ease;
+}
+
+.project-buttons object {
+  color: #ffffff;
+  font-size: 1rem;
+  line-height: 1.5rem;
   border-radius: 0.7rem;
   gap: 0.5rem;
   justify-content: center;
@@ -618,12 +633,23 @@ a {
   align-items: center;
 }
 
+/* delete */
 .more-projects svg {
   display: block;
   margin-left: 5px;
 }
-
+/* delete */
 .project-stack svg {
+  width: 1rem;
+  height: 1rem;
+}
+
+.more-projects object {
+  display: block;
+  margin-left: 5px;
+}
+
+.project-stack object {
   width: 1rem;
   height: 1rem;
 }
