--- a/styles.css
+++ b/styles.css
@@ -382,9 +382,14 @@ a {
   transform: scale(1.05);
 }
 
-.social-media li a svg {
+.social-media li a object {
   width: 1.5rem;
   height: 1.5rem;
+  pointer-events: none;
+}
+
+.social-media li a object:hover {
+  cursor: pointer;
 }
 
 .cv {
@@ -425,7 +430,7 @@ a {
   background-color: var(--detail-color);
 }
 
-.experience-icon svg {
+.experience-icon object {
   width: 1rem;
   height: 1rem;
   display: block;
@@ -572,7 +577,6 @@ a {
   margin-top: 1rem;
 }
 
-/* delete */
 .project-buttons a {
   color: #ffffff;
   font-size: 1rem;
@@ -588,22 +592,12 @@ a {
   transition: background-color 0.25s ease, color 0.25s ease;
 }
 
-.project-buttons object {
-  color: #ffffff;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  border-radius: 0.7rem;
-  gap: 0.5rem;
-  justify-content: center;
-  align-items: center;
-  max-width: fit-content;
-  display: inline-flex;
-  text-decoration: none;
-  transition: background-color 0.25s ease, color 0.25s ease;
-}
-
 .preview {
   background-color: var(--detail-color);
+}
+
+.preview object, .code object {
+  pointer-events: none;
 }
 
 .preview:hover {
@@ -633,15 +627,9 @@ a {
   align-items: center;
 }
 
-/* delete */
 .more-projects svg {
   display: block;
   margin-left: 5px;
-}
-/* delete */
-.project-stack svg {
-  width: 1rem;
-  height: 1rem;
 }
 
 .more-projects object {
